application/controllers/Dashboard.php - new methods added to deal with ajax request to retrieve favourites application/models/Actions_model.php - new model method to retrieve favourite from DB application/views/dashboard/home.php - new form added to favourites to enable sort of pipeline and customers via ajax application/views/layouts/footer.php - ?? Pulled out to evaluate. Refactored spacing and script f assets/css/style.css -  hide  favourite sort form on dashboard load assets/js/actions.js -  increased row from 1 to 2 on add action outcome form assets/js/fe_tagging.js -  Added default array to prevent variable showing as undefined if no value present

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2298,6 +2298,8 @@ background-color:#2B4461;
     
 }
 
+
+.sortform{ display:none;}
 /*! Hint.css - v2.2.1 - 2016-03-26
 * http://kushagragour.in/lab/hint/
 * Copyright (c) 2016 Kushagra Gour; Licensed  */
